--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 </div>
             </div>
             <div class="col-12 my-2 ">
-                <button class="btn btn-success" id="btnTaoThe">Tạo thẻ</button>
+                <button class="btn btn-success" id="btnTaoThe">Tạo Div</button>
             </div>
             <div class="footer text-muted alert alert-success" id="showInfoTaoThe">
                 <i class="fa-solid fa-shapes"></i>
